fixed left margin on mobile screens

--- a/css/grayscale.css
+++ b/css/grayscale.css
@@ -9,6 +9,7 @@ body {
     height: 100%;
     font-family: Lora,"Helvetica Neue",Helvetica,Arial,sans-serif;
     color: #5B5F67;
+    font-size: 1em;
     background-color: #fff;
 }
 
